# modelseed-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPENDENCIES.md  Dockerfile  LICENSE  PROGRESS.md  README.md  docker-build.sh  docker-compose.yml  pyproject.toml
data/media/public/: 7H9.json  ArgonneLBMedia.json  ArgonneNMSMedia.json  AuxoMedia.json  Biolog-C-acgam-N--acgam.json  Biolog-C-cytd-N-cytd.json  Biolog-C-cytd.json  Biolog-C-dna-N-dna-P-dna.json  Biolog-C-dna-P-dna.json  Biolog-C-dna.json  Biolog-C-gln-l-N-gln-l.json  (+512 more)
docs/: API_ONBOARDING.md  OPS_RUNBOOK.md  WORKAROUNDS.md
scripts/: integration_test.py  test_auto_classification.py
src/job_scripts/: gapfill.py  merge_models.py  reconstruct.py  run_fba.py  utils.py
src/modelseed_api/: __init__.py  config.py  main.py
src/modelseed_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_auth.py  test_live_integration.py
tests/e2e/: conftest.py  test_biochem_workflow.py  test_model_lifecycle.py
tests/integration/: conftest.py  test_biochem_service_real.py  test_job_dispatcher.py  test_job_store.py  test_local_storage.py  test_model_service_local.py
tests/routes/: conftest.py  test_auth_expanded.py  test_biochem_routes.py  test_job_routes.py  test_media_routes.py  test_model_routes.py  test_workspace_routes.py
tests/test_mcp/: test_biochem_tools.py  test_job_tools.py  test_media_tools.py  test_model_tools.py
tests/unit/: conftest.py  test_biochem_parsing.py  test_export_conversion.py  test_gapfill_parsing.py  test_model_formatting.py  test_model_transformations.py
(+27 files in other folders)
