[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelseed-api"
version = "0.1.0"
description = "Modern REST API backend for the ModelSEED metabolic modeling platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jose P. Faria"},
    {name = "Christopher Henry", email = "chenry@anl.gov"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
modeling = [
    "kbutillib",
    "modelseedpy>=0.4.0",
    "cobra>=0.29.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
celery = [
    "celery[redis]>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
